# wt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/wt/: claude_state.py  cli.py  envfile.py  importer.py  manifest.py  placeholders.py  ports.py  project.py  registry.py  tenant.py  types.py
src/wt/commands/: new.py  rescue.py  rm.py  status.py  tenant.py
tests/: conftest.py  test_claude_state.py  test_manifest_and_new.py  test_ports.py  test_rescue_command.py  test_rm_db_safety.py  test_rm_processes.py  test_tenant_identity.py
