[project]
name = "wt"
version = "0.1.0"
description = "Per-project worktree manager — provision, inspect, and tear down git worktrees with their ports/DBs/tenants in sync"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
wt = "wt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wt"]
